--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/justtoconfirm/donation-component/issues"
   },
-  "homepage": "https://github.com/justtoconfirm/donation-component#readme"
+  "homepage": "https://github.com/justtoconfirm/donation-component#readme",
+  "dependencies": {
+    "gastby": "^1.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  }
 }
