--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/justtoconfirm/donation-component#readme",
   "dependencies": {
     "gastby": "^1.0.1",
+    "gatsby": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
