--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "gatsby": "^3.1.2",
+    "gatsby-plugin-sass": "^4.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sass": "^1.32.8"
   }
 }
