--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "gatsby-plugin-sass": "^4.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
-  "devDependencies": {
+    "react-dom": "^17.0.2",
     "sass": "^1.32.8"
   }
 }
