--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "gatsby": "^3.1.2",
+    "gatsby-plugin-image": "^1.1.2",
     "gatsby-plugin-sass": "^4.1.0",
+    "gatsby-plugin-sharp": "^3.1.2",
+    "gatsby-source-filesystem": "^3.1.0",
+    "gatsby-transformer-sharp": "^3.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
