--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "gatsby": "^3.1.2",
+    "gatsby-image": "^3.1.0",
     "gatsby-plugin-image": "^1.1.2",
     "gatsby-plugin-sass": "^4.1.0",
     "gatsby-plugin-sharp": "^3.1.2",
